# marie-kondo

./: README.md  classifier.py  config.py  file_mover.py  file_watcher.py  logger.py  main.py  pyproject.toml  requirements.txt
